--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,17 @@ authors = ["DueViktor <viktorduep@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
+networkx = "^3.2.1"
+numpy = "^1.26.1"
+scipy = "^1.11.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.3"
 pytest = "^7.4.3"
 pre-commit = "^3.5.0"
 pytest-cov = "^4.1.0"
+ipykernel = "^6.26.0"
 
 [build-system]
 requires = ["poetry-core"]
