--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@ __pycache__/
 .DS_Store
 .coverage
 poetry.lock
-data/littlesis-*
+
+# ignore data files except voteview-
+data/
+!data/voteview-HS117_members.csv
