--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.11,<3.13"
 networkx = "^3.2.1"
 numpy = "^1.26.1"
 scipy = "^1.11.3"
+pandas = "^2.1.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.3"
