--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ networkx = "^3.2.1"
 numpy = "^1.26.1"
 scipy = "^1.11.3"
 pandas = "^2.1.2"
+tqdm = "^4.66.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.3"
