--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ numpy = "^1.26.1"
 scipy = "^1.11.3"
 pandas = "^2.1.2"
 tqdm = "^4.66.1"
+plotly = "^5.18.0"
+nbformat = "^5.9.2"
+scikit-learn = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.3"
